fixed mailto bug, header button mobile fix

--- a/src/components/Header/header.styles.module.css
+++ b/src/components/Header/header.styles.module.css
@@ -12,7 +12,7 @@
 
 .nav {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: space-between;
   position: fixed;
   top: 0;
@@ -24,12 +24,11 @@
   max-height: 0;
   background-color: var(--palette-white);
   transition: max-height .5s ease-out;
-  padding-right: var(--spaces-xSmall)
 }
 
 .nav ul {
-  padding-top: 90px;
   padding-left: var(--spaces-large);
+  padding-top: 90px;
 }
 
 .nav li {
@@ -111,10 +110,8 @@
   top: 0;
 }
 
-@media (min-width: 576px) {
-  .nav ul {
-    padding-left: var(--spaces-xSmall);
-  }
+.button {
+  margin: 0 var(--spaces-large) 90px;
 }
 
 @media (min-width: 992px) {
@@ -124,8 +121,12 @@
   }
 
   .nav {
+    flex-direction: revert;
+    align-items: center;
     position: relative;
     max-height: none;
+    padding: 0;
+    padding-right: var(--spaces-xSmall)
   }
 
   .nav ul {
